// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonsRow > renders a disabled send button 1`] = `
<body>
  <div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        class="_button_1nw83_8 sc-bdvwhi bMkJBS"
        data-kind="secondary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled="true"
        class="_button_1nw83_8 sc-bdvwhi bMkJBS"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="submit"
      >
        Send invite to guest
      </button>
    </div>
  </div>
</body>
`;

exports[`ButtonsRow > renders the cancel button 1`] = `
<body>
  <div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        class="_button_1nw83_8 sc-bdvwhi bMkJBS"
        data-kind="secondary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="button"
      >
        Cancel
      </button>
      <button
        aria-disabled="false"
        class="_button_1nw83_8 sc-bdvwhi bMkJBS"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="submit"
      >
        Send invite to guest
      </button>
    </div>
  </div>
</body>
`;

exports[`ButtonsRow > renders the copied tooltip 1`] = `
<body>
  <div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        aria-describedby="_r_6_"
        class="_button_1nw83_8 sc-bdvwhi bMkJBS _has-icon_1nw83_60"
        data-kind="secondary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy invite link
      </button>
      <button
        aria-disabled="false"
        class="_button_1nw83_8 sc-bdvwhi bMkJBS"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="submit"
      >
        Send invite to guest
      </button>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id="_r_8_"
  >
    <div
      class="_tooltip_1a21r_8"
      data-floating-ui-focusable=""
      id="_r_6_"
      role="tooltip"
      style="position: absolute; left: 0px; top: 0px; max-width: 580px; transform: translate(0px, 0px);"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        class="_arrow_1a21r_43"
        height="10"
        style="position: absolute; pointer-events: none; top: 100%;"
        viewBox="0 0 10 10"
        width="10"
      >
        <path
          d="M0,0 H10 L5,6 Q5,6 5,6 Z"
          stroke="none"
        />
        <clippath
          id="_r_9_"
        >
          <rect
            height="10"
            width="10"
            x="0"
            y="0"
          />
        </clippath>
      </svg>
      <span
        class="_clamp_1a21r_28"
        id="_r_4_"
        style="--cpd-tooltip-max-lines: 2;"
      >
        Link copied - expires in 30 days
      </span>
    </div>
  </div>
</body>
`;

exports[`ButtonsRow > renders the copy link button 1`] = `
<body>
  <div>
    <div
      class="_flex_4dswl_9"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: start; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-4x); --mx-flex-wrap: nowrap;"
    >
      <button
        class="_button_1nw83_8 sc-bdvwhi bMkJBS _has-icon_1nw83_60"
        data-kind="secondary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 19.071q-1.467 1.467-3.536 1.467-2.067 0-3.535-1.467t-1.467-3.535q0-2.07 1.467-3.536L7.05 9.879q.3-.3.707-.3t.707.3.301.707-.3.707l-2.122 2.121a2.9 2.9 0 0 0-.884 2.122q0 1.237.884 2.12.884.885 2.121.885t2.122-.884l2.121-2.121q.3-.3.707-.3t.707.3.3.707q0 .405-.3.707zm-1.414-4.243q-.3.3-.707.301a.97.97 0 0 1-.707-.3q-.3-.3-.301-.708 0-.405.3-.707l4.243-4.242q.3-.3.707-.3t.707.3.3.707-.3.707zm6.364-.707q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.301-.707 0-.405.3-.707l2.122-2.121q.884-.885.884-2.121 0-1.238-.884-2.122a2.9 2.9 0 0 0-2.121-.884q-1.237 0-2.122.884l-2.121 2.122q-.3.3-.707.3a.97.97 0 0 1-.707-.3q-.3-.3-.3-.708 0-.405.3-.707L12 4.93q1.467-1.467 3.536-1.467t3.535 1.467 1.467 3.536T19.071 12z"
          />
        </svg>
        Copy invite link
      </button>
      <button
        aria-disabled="false"
        class="_button_1nw83_8 sc-bdvwhi bMkJBS"
        data-kind="primary"
        data-size="lg"
        role="button"
        tabindex="0"
        type="submit"
      >
        Send invite to guest
      </button>
    </div>
  </div>
</body>
`;
